<resources>
    <string name="app_name">QLSV_android</string>
    <string name="title_activity_teacher">teacherActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_info">Thông tin chi tiết</string>
    <string name="menu_password">Đặt lại mật khẩu</string>
    <string name="menu_logout">Đăng xuất</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="nav_open"> Open navigation </string>
    <string name="nav_close"> Close navigation </string>
    <string name="save">save</string>
    <string name="edit">edit</string>
    <string name="reset_password">Đặt lại mật khẩu</string>
    <string name="thong_tin">Thông tin</string>
    <string name="current_password">Mật khẩu hiện tại:\n</string>
    <string name="new_password">Mật khẩu mới:</string>
    <string name="input_newpass">Nhập mật khẩu mới</string>
    <string name="input_current_password">Nhập mật khẩu hiện tại</string>
    <string name="input_reNewPass">Nhập lại mật khẩu</string>
    <string name="comfirm">Xác nhận</string>
    <string name="chuong_trinh_khung">Chương trình khung\n</string>
    <string name="ql_sinhvien">Quản lý sinh viên\n</string>
    <string name="view">Xem</string>
    <string name="add">Thêm</string>
    <string name="delete">Xóa</string>
    <string name="update">Cập nhật</string>
    <string name="list_hint">Danh sách các sinh viên</string>
    <string name="add_hint">Thêm Thông tin sinh viên</string>
    <string name="view_hint">Xem Thông Tin Sinh Viên</string>
    <string name="update_hint">Cập nhật Thông tin sinh viên</string>
    <string name="delete_hint">Xóa sinh viên</string>
    <string name="create_class">Tạo Lớp Học</string>
    <string name="delete_class">Xóa Lớp Học</string>
    <string name="view_class">Xem Lớp Học</string>
    <string name="list_hint_class">Danh sách các lớp học</string>
    <string name="lich_hoc">Lịch học\n</string>
    <string name="select_subject">Chọn môn học\n</string>
    <string name="select_class">Chọn lớp học\n</string>


</resources>