<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_info">

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.qlsv_android.ui.info.InfoFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_password"
        android:name="com.example.qlsv_android.ui.password.PasswordFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_password" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.qlsv_android.ui.logout.LogoutFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_logout" />
</navigation>