<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/edit_text_background"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar_Reset"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#2196F3">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/icons8_back_64"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_marginStart="16dp"/>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:orientation="vertical"
                android:textAlignment="center">

                <androidx.constraintlayout.widget.Group
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:constraint_referenced_ids="current_password,etxtCurrentPass,textView3,etxtNewPass,textView4,etxtReNewPass" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="204dp" />

                <TextView
                    android:id="@+id/current_password"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/current_password"
                    android:textAlignment="textStart"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/etxtCurrentPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/input_current_password"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/new_password" />

                <EditText
                    android:id="@+id/etxtNewPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:layout_marginTop="12dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:hint="@string/input_newpass"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/input_newpass"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/etxtReNewPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:layout_marginTop="12dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:hint="@string/input_reNewPass"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="510dp"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view"
                        android:layout_width="189dp"
                        android:layout_height="31dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnComfirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/comfirm" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>