<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActSinhVienActivity">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:textAlignment="gravity"
                android:theme="?attr/actionBarTheme">

                <ImageButton
                    android:id="@+id/imageBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/icons8_back_64" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/ql_sinhvien"
                    android:textAlignment="gravity"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <EditText
                        android:id="@+id/etxtUpdate"
                        android:layout_width="242dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounder_layout"
                        android:ems="10"
                        android:hint="Tìm thông tin với tên"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/t1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounder_layout"
                        android:text="Tìm" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <EditText
                        android:id="@+id/etxtDelete"
                        android:layout_width="242dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounder_layout"
                        android:ems="10"
                        android:hint="@string/delete_hint"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/t2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounder_layout"
                        android:text="@string/delete" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etxtAdd"
                        android:layout_width="241dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounder_layout"
                        android:ems="10"

                        android:hint="@string/add_hint"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/t3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounder_layout"
                        android:text="@string/add" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <EditText
                        android:id="@+id/etxtView"
                        android:layout_width="242dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounder_layout"
                        android:ems="10"
                        android:hint="@string/view_hint"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/t4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounder_layout"
                        android:text="@string/view" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <EditText
                        android:id="@+id/etxtList"
                        android:layout_width="242dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounder_layout"
                        android:ems="10"
                        android:hint="@string/list_hint"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/t5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounder_layout"
                        android:text="@string/view" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <EditText
                        android:id="@+id/etxtAddClass"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounder_layout"
                        android:ems="10"
                        android:hint="Thêm Lớp Học"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:textSize="10sp" />


                    <EditText
                        android:id="@+id/etxtAddKhoa"
                        android:layout_width="94dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/rounder_layout"
                        android:gravity="center"
                        android:hint="Thêm Khoa"
                        android:textAlignment="center"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/t6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnAddClass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounder_layout"
                        android:text="@string/view" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <Spinner
                        android:id="@+id/spnUpdateClass"
                        android:layout_width="201dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounder_layout" />

                    <TextView
                        android:id="@+id/t7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnUpdateClass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounder_layout"
                        android:text="@string/view" />

                    <Button
                        android:id="@+id/btnDeleteClass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounder_layout"
                        android:text="@string/delete" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <TextView
                        android:id="@+id/t8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>